<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/god_calc"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/god_calc"
        android:textSize="50sp"/>

    <TextView
        android:id="@+id/first_number_text_view"
        android:layout_below="@id/god_calc"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:text="@string/first_number"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/first_number_edit_text"
        android:layout_alignTop="@+id/first_number_text_view"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/first_number_text_view"
        android:layout_toRightOf="@+id/first_number_text_view"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <TextView
        android:id="@+id/second_number_text_view"
        android:layout_below="@id/first_number_text_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/second_number"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/second_number_edit_text"
        android:inputType="number"
        android:layout_alignTop="@+id/second_number_text_view"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/second_number_text_view"
        android:layout_toRightOf="@+id/second_number_text_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <Spinner
        android:id="@+id/func_options_spinner"
        android:layout_below="@+id/second_number_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:entries="@array/func_options" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/func_options_spinner"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/calculate"
        style="@style/exhausted"/>

    <TextView
        android:id="@+id/answer"
        android:layout_below="@id/calculate_button"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:text="@string/nan"
        android:textSize="80sp"/>
</RelativeLayout>